--- a/styles/home.css
+++ b/styles/home.css
@@ -1,1 +1,38 @@
-/* add home page styles here */
+h1 {
+    font-size: 2.0em;
+    padding: 20px;
+    margin: 20px;
+}
+
+section {
+    font-size: 1.1em;
+    background-color: #D1BEB0;
+    border-radius: 20px;
+}
+
+body {
+    background-color: #3C4F76
+}
+
+img {
+    border-radius: 10px;
+}
+
+label > img {
+    width: 100px;
+    height 100px;
+}
+
+input {
+    display: none;
+}
+
+input:checked + img {
+    border: 3px solid yellow;
+}
+
+button {
+    width: 100px;
+    border: 1px solid yellow;
+    border-radius: 5px;
+}
