--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ body {
     --color5: hsla(224, 40%, 79%, 1); */
     
     --header-height: 80px;
-    --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
+    /* --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45); */
     --gutter: 30px;
     --footer-height: 25px;
     
@@ -47,7 +47,7 @@ section {
 
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
