--- a/styles/home.css
+++ b/styles/home.css
@@ -9,6 +9,9 @@ section {
     font-size: 1.1em;
     background-color: #D1BEB0;
     border-radius: 20px;
+    width: 600px;
+    border: solid 3px white;
+    padding: 30px;
 }
 
 body {
@@ -39,6 +42,31 @@ input:checked + img {
 
 button {
     width: 100px;
-    border: 1px solid yellow;
-    border-radius: 5px;
+    border: 3px solid yellow;
+    font-size: 1.25rem;
+    border-radius: 50px;
+}
+
+.label-container {
+    display: flex;
+    width: 650px;
+    justify-content: space-between;
+}
+
+.button-container {
+    width: 300px;
+    height: 100px;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 30px;
+}
+
+.scoreboard {
+    display: flex;
+    text-align: center;
+    padding: 20px;
+}
+
+.score {
+    margin: 5px;
 }
